--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -6,11 +6,12 @@
     <!-- This detects the screen in which the page is viewed-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Describes what is on the page-->
-    <meta name="Description" content="Assignment 1 | Favourite Song">
+    <meta name="Description" content="Assignment 2 | Pizza Store ordering page">
     <!-- Titles for the page-->
     <title>Petey's pizzeria</title>
     <!-- No follow or index until page is done-->
     <meta name="robots" content="noindex, nofollow">
+    <!-- Fonts from google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
