--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -25,8 +25,8 @@
         <!--I want to have the menu as a popout side style menu-->
         <nav>
             <menu>
-                <li><a href="#">About the Company</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Hudson Soft</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="#">BUY NOW!</a></li>
             </menu>
         </nav>
@@ -47,22 +47,56 @@
             are capable of displaying 482 colors simultaneously out of 512. </p>
         </div>
         <div>
-            <img src="" alt="Classic turbo graphics console">
+            <img src="./img/81IsZhpOuuL.jpg" alt="Classic turbo graphics console">
             <a href="#">More information</a>
         </div>
     </section>
-    <!-- -->
+    <!--Brief information about the company behind the making of the console -->
+    <section>
+        <div>
+            <h3>Hudson soft</h3>
+            <img src="./img/company%20logo.png" alt="Hudson soft Ltd. logo">
+            <p>Hudson soft ltd. was a japanese video game company that released numerous games for video game
+            consoles, home computers and mobile phones mainly from 1980s to 2000s. Founded on May 18 1973, Hudson
+            Soft initialy dealt with personal computers, but later ....</p>
+            <a href ="" >More about us..</a>
+        </div>
+    </section>
 </main>
 <aside>
-    <!-- -->
+    <!-- Three major game titles I played -->
     <article>
-
+        <figure>
+            <img src="./img/Neutopia_boxart.jpg" alt="Neutopia Box Art">
+            <figcaption>Neutopia takes place in the distant past in the land of Neutopia – a prosperous and peaceful
+                land in which the people worshipped at a Sacred Shrine and were watched over by Princess Aurora</figcaption>
+            <a href="https://en.wikipedia.org/wiki/Neutopia">More about Neutopia</a>
+        </figure>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/TurboGrafx-16_Dungeon_Explorer_cover_art.jpg" alt="Dungeon Explorer Box Art">
+            <figcaption>When the alien race that now rules the land invaded, the stone was hidden deep in the dungeons
+                of the land by the King to keep it safe. Now, however, the king wants the players to recover the stone,
+                which can bring life, light, and happiness to kill the alien king Natas.</figcaption>
+            <a href="https://en.wikipedia.org/wiki/Dungeon_Explorer_(1989_video_game)">More about Dungeon Explorer</a>
+        </figure>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/Bonkadventure.jpg" alt="Bonks adventure box art">
+            <figcaption>The game takes place in a fictional prehistoric era. Its protagonist is Bonk, a strong and bald
+                caveboy who battles anthropomorphic dinosaurs and other prehistoric enemies</figcaption>
+            <a href="https://en.wikipedia.org/wiki/Bonk%27s_Adventure">More about Bonks Adventure</a>
+        </figure>
     </article>
 </aside>
 <footer>
         <!-- Copyright disclaimer -->
     <section>
-
+        <div>
+            <img src="./img/turbographicslogo.jpg" alt="Turbo graphics 16 logo">
+        </div>
     </section>
     <!--  -->
     <section>
