--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -12,18 +12,21 @@
     <!-- No follow or index until page is done  -->
     <meta name="robots" content="noindex,nofollow">
     <!-- Google Fonts -->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<header id="head">
+<header>
     <section class="main-Actor-Head">
         <h1>Kevin Bacon</h1>
     </section>
 </header>
 <main>
-    <section id="small-info-section">
+    <section class="small-info-section">
         <div>
             <p id="first-Line-info">They say there's nothing new under the sun</p>
             <p id="second-Line-info">But under the ground...</p>
@@ -32,8 +35,6 @@
     <section id="movie-title">
         <h2>T R E M O R S</h2>
     </section>
-</main>
-<footer>
     <section id="first-footer-section">
         <div>
             <p id="small-footer-letters">A</p>
@@ -56,6 +57,32 @@
             <p id="large-footer-letters7">ALEXANDER GRUSZYNSKI</p>
         </div>
     </section>
+    <section id="third-footer-section">
+        <div>
+            <p id="small-footer-letters8">Line Producer</p>
+            <p id="large-footer-letters8">GINNY NUGENT</p>
+            <p id="small-footer-letters9">Executive Producer</p>
+            <p id="large-footer-letters9">GALE ANNE HURD</p>
+            <p id="small-footer-letters10">Story by:</p>
+            <p id="large-footer-letters10">S.S. WILSON & BRENT MADDOCK & RON UNDERWOOD</p>
+            <p id="small-footer-letters11">Screenplay by:</p>
+            <p id="large-footer-letters11">S.S. WILSON & BRENT MADDOCK</p>
+        </div>
+    </section>
+    <section id="last-footer-section">
+        <div>
+            <img src="./img/pg13logo.png" alt="PG 13 information logo">
+        </div>
+        <div>
+            <p id="small-footer-letters12">Produced by:</p>
+            <p id="large-footer-letters12">BRENT MADDOCK and S.S. WILSON</p>
+            <p id="small-footer-letters13">Directed by</p>
+            <p id="large-footer-letters13">RON UNDERWOOD</p>
+        </div>
+    </section>
+</main>
+<footer>
+
 </footer>
 </body>
 </html>
