--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -22,7 +22,7 @@
 <body>
 <header>
     <section class="main-Actor-Head">
-        <h1>Kevin Bacon</h1>
+        <h1>KEVIN BACON</h1>
     </section>
 </header>
 <main>
