--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -1,38 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- This declares the character-set that is to be used-->
-    <meta charset="UTF-8">
-    <!-- This detects the screen in which the page is viewed-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Describes what is on the page-->
-    <meta name="Description" content="Final Project | Pre 1994 item ">
-    <!-- Titles for the page-->
-    <title>Turbo Graphics 16</title>
-    <!-- No follow or index until page is done-->
-    <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="./css/style.css">
+<head id="head">
+    <!--Title of main page -->
+    <title>Main Page For Turbo graphix 16</title>
+    <!-- Description of current page-->
+    <meta name="description" content="Main page of Final Project">
+    <!-- Jquery scripts -->
+    <script
+            src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"></script>
+    <!-- Jscript files -->
+    <script type="text/javascript" src="./js/JSforpages.js"></script>
 </head>
 <body>
-<header>
-    <!-- -->
-    <section>
-        <div>
-            <a href="index.html">
-                <img src="./img/turbographicslogo.jpg" alt ="Turbo Graphics 16 Logo">
-            </a>
-        </div>
-        <!--I want to have the menu as a popout side style menu-->
-        <nav>
-            <menu>
-                <li><a href="#">Hudson Soft</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">BUY NOW!</a></li>
-            </menu>
-        </nav>
-    </section>
-
-</header>
+<!-- Loaded from outside file -->
+<header id="header"></header>
 <!--Main Context of the page -->
 <main>
     <!-- Main header of the page -->
@@ -58,7 +41,7 @@
             <img src="./img/company%20logo.png" alt="Hudson soft Ltd. logo">
             <p>Hudson soft ltd. was a japanese video game company that released numerous games for video game
             consoles, home computers and mobile phones mainly from 1980s to 2000s. Founded on May 18 1973, Hudson
-            Soft initialy dealt with personal computers, but later ....</p>
+            Soft initially dealt with personal computers, but later ....</p>
             <a href ="" >More about us..</a>
         </div>
     </section>
