--- a/Final Project/header.html
+++ b/Final Project/header.html
@@ -9,9 +9,23 @@
     </div>
     <!--I want to have the menu as a popout side style menu-->
     <nav>
-        <menu>
-            <li><a href="#">Hudson Soft</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">BUY NOW!</a></li>
+        <menu class="DesktopMenu">
+            <li><img src="./img/sword.png" alt="sword"><a href="./AboutUs.html">Hudson Soft</a></li>
+            <li><img src="./img/sword.png" alt="sword"><a href="./AboutTurboGraphics16.html">About/Contact</a></li>
+            <li><img src="./img/sword.png" alt="sword"><a href="#">BUY NOW!</a></li>
+        </menu>
+        <menu class="MobileMenu">
+            <div class="menuToggle">
+                <input type="checkbox"/>
+                <img src="./img/sword.png" alt="sword">
+                <img src="./img/sword.png" alt="sword">
+                <img src="./img/sword.png" alt="sword">
+
+                <menu class="menuItem">
+                    <li><a href="./AboutUs.html">Hudson Soft</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">BUY NOW!</a></li>
+                </menu>
+            </div>
         </menu>
     </nav>
