--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -12,6 +12,8 @@
             crossorigin="anonymous"></script>
     <!-- Jscript files -->
     <script type="text/javascript" src="./js/JSforpages.js"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <!-- Loaded from outside file -->
@@ -23,26 +25,32 @@
         <h1>Turbo Graphics 16</h1>
     </section>
     <!--brief info with a link to the full information page-->
+
     <section>
-        <div>
-            <h3>1987 Technological Gaming At its best</h3>
-            <p>The console has an 8-bit computer processor unit with dal 16-bit graphics processing unit!. The GPUs
-            are capable of displaying 482 colors simultaneously out of 512. </p>
-        </div>
+        <h3>1987 Technological Gaming At its best</h3>
         <div>
             <img src="./img/81IsZhpOuuL.jpg" alt="Classic turbo graphics console">
+            <p>The console has an 8-bit computer processor unit with dal 16-bit graphics processing unit!. The GPUs
+                are capable of displaying 482 colors simultaneously out of 512. The PC Engine made its debut in the Japanese
+                market on October 30, 1987, and it was a tremendous success.The PC Engine had an elegant, "eye-catching"
+                design, and it was very small compared to its rivals.In 1988, NEC decided to expand to the American
+                market and directed its U.S. operations to develop the system for the new audience. NEC Technologies
+                boss Keith Schaefer formed a team to test the system. They found out that there was a lack of
+                enthusiasm in its name "PC Engine" and also felt its small size was not very suitable to American
+                consumers who would generally prefer a larger and "futuristic" design. They decided to call the
+                system the "TurboGrafx-16", a name representing its graphical speed and strength and its 16-bit GPU</p>
             <a href="#">More information</a>
         </div>
     </section>
     <!--Brief information about the company behind the making of the console -->
     <section>
+        <h3>Hudson soft</h3>
         <div>
-            <h3>Hudson soft</h3>
-            <img src="./img/company%20logo.png" alt="Hudson soft Ltd. logo">
             <p>Hudson soft ltd. was a japanese video game company that released numerous games for video game
             consoles, home computers and mobile phones mainly from 1980s to 2000s. Founded on May 18 1973, Hudson
             Soft initially dealt with personal computers, but later ....</p>
-            <a href ="" >More about us..</a>
+            <img src="./img/company%20logo.png" alt="Hudson soft Ltd. logo">
+            <a href ="./AboutUs.html" >More about us..</a>
         </div>
     </section>
 </main>
@@ -51,7 +59,7 @@
     <article>
         <figure>
             <img src="./img/Neutopia_boxart.jpg" alt="Neutopia Box Art">
-            <figcaption>Neutopia takes place in the distant past in the land of Neutopia – a prosperous and peaceful
+            <figcaption>Neutopia takes place in the distant past in the land of Neutopia, a prosperous and peaceful
                 land in which the people worshipped at a Sacred Shrine and were watched over by Princess Aurora</figcaption>
             <a href="https://en.wikipedia.org/wiki/Neutopia">More about Neutopia</a>
         </figure>
@@ -74,17 +82,5 @@
         </figure>
     </article>
 </aside>
-<footer>
-        <!-- Copyright disclaimer -->
-    <section>
-        <div>
-            <img src="./img/turbographicslogo.jpg" alt="Turbo graphics 16 logo">
-        </div>
-    </section>
-    <!--  -->
-    <section>
-
-    </section>
-</footer>
 </body>
 </html>
