--- a/Final Project/AboutTurboGraphics16.html
+++ b/Final Project/AboutTurboGraphics16.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head id = "head">
     <title>About Turbo Graphics 16</title>
     <meta name="description" content="About Turbo Graphics 16">
     <script
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./js/JSforpages.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body id="AboutTurbo">
     <header id="header"></header>
-    <main id="AboutTurbo">
+    <main >
         <section>
             <div>
             <p>The TurboGrafx-16, known as the PC Engine outside North America, is a home
@@ -47,8 +47,8 @@
                 </p>
             </div>
             <div>
-                <img src="./img/TurboGrafx-16-Console.jpg" alt="Picture of Console">
-                <img src="./img/PC-Engine-Console-Set.jpg" alt="Japanese Console">
+                <img src="./img/TurboGrafx-16-Console.png" alt="Picture of Console">
+                <img src="./img/PC-Engine-Console-Set.png" alt="Japanese Console">
             </div>
         </section>
         <section>
@@ -57,5 +57,6 @@
             </div>
         </section>
     </main>
+    <footer id="footer"></footer>
 </body>
 </html>
