--- a/Final Project/AboutUs.html
+++ b/Final Project/AboutUs.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head id ="head">
     <title>About us</title>
     <meta name="description" content="About us Page">
     <script
@@ -42,5 +42,6 @@
             <a href="https://en.wikipedia.org/wiki/Hudson_Soft">Hudson Soft Wikipage</a>
         </section>
     </main>
+    <footer id="footer"></footer>
 </body>
 </html>
