--- a/Final Project/header.html
+++ b/Final Project/header.html
@@ -10,22 +10,9 @@
     <!--I want to have the menu as a popout side style menu-->
     <nav>
         <menu class="DesktopMenu">
-            <li><img src="./img/sword.png" alt="sword"><a href="./AboutUs.html">Hudson Soft</a></li>
-            <li><img src="./img/sword.png" alt="sword"><a href="./AboutTurboGraphics16.html">About/Contact</a></li>
-            <li><img src="./img/sword.png" alt="sword"><a href="#">BUY NOW!</a></li>
+            <li><img id="Top_Sword" src="./img/sword.png" alt="sword"><a href="./AboutUs.html">Hudson Soft</a></li>
+            <li><img id="Middle_Sword" src="./img/sword.png" alt="sword"><a href="./AboutTurboGraphics16.html">About/Contact</a></li>
+            <li><img id="Bottom_Sword" src="./img/sword.png" alt="sword"><a href="./BuyNow.html">BUY NOW!</a></li>
         </menu>
-        <menu class="MobileMenu">
-            <div class="menuToggle">
-                <input type="checkbox"/>
-                <img src="./img/sword.png" alt="sword">
-                <img src="./img/sword.png" alt="sword">
-                <img src="./img/sword.png" alt="sword">
 
-                <menu class="menuItem">
-                    <li><a href="./AboutUs.html">Hudson Soft</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">BUY NOW!</a></li>
-                </menu>
-            </div>
-        </menu>
     </nav>
