--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -29,7 +29,7 @@
     <section>
         <h3>1987 Technological Gaming At its best</h3>
         <div>
-            <img src="./img/81IsZhpOuuL.jpg" alt="Classic turbo graphics console">
+            <img src="./img/81IsZhpOuuL.png" alt="Classic turbo graphics console">
             <p>The console has an 8-bit computer processor unit with dal 16-bit graphics processing unit!. The GPUs
                 are capable of displaying 482 colors simultaneously out of 512. The PC Engine made its debut in the Japanese
                 market on October 30, 1987, and it was a tremendous success.The PC Engine had an elegant, "eye-catching"
@@ -82,5 +82,6 @@
         </figure>
     </article>
 </aside>
+<footer id="footer"></footer>
 </body>
 </html>
