--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -39,7 +39,7 @@
                 enthusiasm in its name "PC Engine" and also felt its small size was not very suitable to American
                 consumers who would generally prefer a larger and "futuristic" design. They decided to call the
                 system the "TurboGrafx-16", a name representing its graphical speed and strength and its 16-bit GPU</p>
-            <a href="#">More information</a>
+            <a href="./AboutTurboGraphics16.html">More information</a>
         </div>
     </section>
     <!--Brief information about the company behind the making of the console -->
