--- a/Final Project/metadata.html
+++ b/Final Project/metadata.html
@@ -5,4 +5,7 @@
 <!-- No follow or index until page is done-->
 <meta name="robots" content="noindex, nofollow">
 <!-- Add in all fonts that are to be used in every page-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Special+Elite&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./css/style.css">
