--- a/Final Project/header.html
+++ b/Final Project/header.html
@@ -3,9 +3,10 @@
             <img src="./img/turbographicslogo.jpg" alt ="Turbo Graphics 16 Logo">
         </a>
     </div>
-    <!--Empty for the time being gonna use it later for a mini animation -->
     <div>
-
+        <!--Character movement -->
+        <div id="Fire"></div>
+        <div id="Character"></div>
     </div>
     <!--I want to have the menu as a popout side style menu-->
     <nav>
